--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Pastelesfe</title>
+  <title>Pastelería - Grupo 5</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Oswald:wght@500;600;700&family=Pacifico&display=swap" rel="stylesheet"> 
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="./assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="./assets/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
+    
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/lib/easing/easing.min.js"></script>
+  <script src="./assets/lib/waypoints/waypoints.min.js"></script>
+  <script src="./assets/lib/counterup/counterup.min.js"></script>
+  <script src="./assets/lib/owlcarousel/owl.carousel.min.js"></script>
+
+  <script src="./assets/js/main.js"></script>
   <app-root></app-root>
 </body>
 </html>
